Fix anchor links on Firefox

--- a/src/templates/post.module.scss
+++ b/src/templates/post.module.scss
@@ -28,16 +28,6 @@
 
     a.anchor {
       box-shadow: none;
-      position: absolute;
-      top: 0;
-      right: calc(100% + calc(0.33 * var(--rhythm)));
-      height: 100%;
-
-      display: flex;
-      align-items: center;
-
-      margin: 0;
-      padding: 0;
     }
 
     blockquote {
